--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node_modules/react-native/packager/packager.sh"
   },
   "dependencies": {
-    "react-native": "0.16.0",
+    "react-native": "^0.18.0-rc",
     "react-native-vector-icons": "^1.0.4"
   }
 }
