--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -2,4 +2,6 @@ rootProject.name = 'SimpleScreenRecorder'
 
 include ':app'
 include ':react-native-vector-icons'
+project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons//home/eissek87/Clojurescript/simple-screen-recorder/node_modules/react-native-vector-icons/android')
+include ':react-native-vector-icons'
 project(':react-native-vector-icons').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-vector-icons/android')
