Revert "updated react native and rnpm and re-natal"
This reverts commit a76a5129df8ae3cd3bf8bb789262be6ffa366bc4.

--- a/android/app/react.gradle
+++ b/android/app/react.gradle
@@ -74,33 +74,14 @@ task bundleReleaseJsAndAssets(type: Exec) {
     enabled config.bundleInRelease ?: true
 }
 
-void runBefore(String dependentTaskName, Task task) {
-    Task dependentTask = tasks.findByPath(dependentTaskName);
-    if (dependentTask != null) {
-        dependentTask.dependsOn task
-    }
-}
-
 gradle.projectsEvaluated {
-
     // hook bundleDebugJsAndAssets into the android build process
-
     bundleDebugJsAndAssets.dependsOn mergeDebugResources
     bundleDebugJsAndAssets.dependsOn mergeDebugAssets
-
-    runBefore('processArmeabi-v7aDebugResources', bundleDebugJsAndAssets)
-    runBefore('processX86DebugResources', bundleDebugJsAndAssets)
-    runBefore('processUniversalDebugResources', bundleDebugJsAndAssets)
-    runBefore('processDebugResources', bundleDebugJsAndAssets)
+    processDebugResources.dependsOn bundleDebugJsAndAssets
 
     // hook bundleReleaseJsAndAssets into the android build process
-
     bundleReleaseJsAndAssets.dependsOn mergeReleaseResources
     bundleReleaseJsAndAssets.dependsOn mergeReleaseAssets
-
-    runBefore('processArmeabi-v7aReleaseResources', bundleReleaseJsAndAssets)
-    runBefore('processX86ReleaseResources', bundleReleaseJsAndAssets)
-    runBefore('processUniversalReleaseResources', bundleReleaseJsAndAssets)
-    runBefore('processReleaseResources', bundleReleaseJsAndAssets)
-
+    processReleaseResources.dependsOn bundleReleaseJsAndAssets
 }
